# slot-server

./: .env  .gitignore  Cargo.toml  README.md  api_documentation.md  pool.sql
src/: main copy.rs  main.rs
src/db/: mod.rs
src/models/: game_model.rs  manage_model.rs  mod.rs
src/mw/: cors.rs
src/orm/: mod.rs  pool.rs  prelude.rs
src/routes/: error.rs  game.rs  manage.rs  mod.rs
