[package]
name = "slot-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.1", features = ["macros"] }
bcrypt = "0.15.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.2.0"
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros"
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] }
slot-algorithm = {git = "https://github.com/arthasyou/slot-algorithm.git", branch = "dev"}